--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,9 @@ export(get_country_coordinates)
 export(get_country_names)
 export(req_stamen_map)
 import(ggmap)
-import(jsonlite)
+import(shiny)
+import(shinythemes)
+import(shinyvalidate)
+import(stringr)
+importFrom(jsonlite,fromJSON)
+importFrom(shiny,validate)
