--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Depends:
   ggmap,
-  shiny
-Imports:
+  shiny,
   shinythemes,
   shinyvalidate,
   stringr,
